# src/routes/comment.routes.ts
@@ -1,6 +1,6 @@
 import express from 'express';
 import { authMiddleware } from '../middleware/auth.middleware.ts';
-import { createComment, deleteComment, getComments, likeComment, unlikeComment, updateComment } from '../controllers/comment.controller.ts';
+import { createComment, deleteComment, getComment, getComments, likeComment, unlikeComment, updateComment } from '../controllers/comment.controller.ts';
 
 const router = express.Router();
 
@@ -8,9 +8,10 @@ router.use(authMiddleware);
 
 router.post('/', createComment);
 router.get('/', getComments);
-router.put('/:publicId', updateComment);
-router.delete('/:publicId', deleteComment);
-router.patch('/:publicId/like', likeComment);
-router.patch('/:publicId/unlike', unlikeComment);
+router.get('/:id', getComment);
+router.put('/:id', updateComment);
+router.delete('/:id', deleteComment);
+router.patch('/:id/like', likeComment);
+router.patch('/:id/unlike', unlikeComment);
 
 export default router;
